# volundr

./: .gitignore  .lintstagedrc.json  .mcp.json.example  .pre-commit-config.yaml  .release-please-manifest.json  LICENSE  M6_REVIEW.md  Makefile  NUITKA_SPIKE.md  README.md  ROADMAP.md  SECURITY.md  SMOKE_TESTS_CANONICAL_ROUTES.md  bifrost.pi.example.yaml  bifrost.yaml.example  codecov.yml  config.yaml.example  coverage.json  demo_review_handler.py  hello.py  mkdocs.yml  package.json  plan.md  planetary_data.md  pnpm-lock.yaml  pyproject.toml  ravn.example.yaml  ravn.tui.example.yaml  ravn_flokk_tui.html  release-please-config.json  route-inventory.json  service-boundaries.md  skuld-0.0.0-tyr.138.tgz  skuld-0.0.0-tyr.146.tgz  skuld-0.0.0-tyr.147.tgz  skuld-0.0.0-tyr.148.tgz  skuld-0.0.0-tyr.149.tgz  skuld-0.0.0-tyr.150.tgz  skuld-0.1.0-dev46.tgz  source_karpathy.md  (+6 more)
.claude/: settings.json
.claude/commands/: visual-parity.md
.claude/hooks/: check-format.sh  run-tests.sh  setup-precommit.sh
.claude/rules/: architecture.md  branching.md  code-style.md  commits.md  database.md  dynamic-adapters.md  migrations.md  module-boundaries.md  no-magic-numbers.md  testing.md  web-styles.md
.claude/skills/: deploy-noatun.md  mesh-e2e.md  new-module.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: changelog.yaml  ci.yaml  cleanup-containers.yaml  cli-pr.yml  cli-release.yml  codeql.yaml  dev.yaml  docs.yaml  feature.yaml  integration-kind.yml  release-please.yaml  release-tag.yaml  release.yaml  reusable-container-build.yaml  reusable-container-scan.yaml  reusable-helm-lint.yaml  reusable-python-lint-test.yaml  reusable-web-lint-test.yaml  reusable-web-next-lint-test.yaml  scorecard.yaml  secrets.yaml
.ravn/personas/: reviewer.yaml  security.yaml
.services/: nginx.conf
.services/pgdata/: pg_hba.conf  postgresql.conf  postmaster.opts  postmaster.pid
.services/status/: postgres.json
.skuld/: conversation.json  conversation_0d7ff879-3b35-46a1-8457-04c51a4bd29f.json  conversation_18cdc378-1121-4442-b08a-6f64f8769bb8.json  conversation_3a348fe1-1511-41e4-ac40-c4fc57f5f996.json  conversation_a55e8627-a147-48e6-9c51-44890deec0ad.json  conversation_acfc7a47-d130-4b01-b8af-93325151817e.json
cerbos/policies/: derived_roles.yaml  pat.yaml  raid.yaml  saga.yaml  secret.yaml  session.yaml  tenant.yaml
charts/bifrost/: Chart.yaml  values.yaml
charts/mimir/: Chart.yaml  values-kanuck.yaml  values-shared.yaml  values.yaml
charts/niuu/: Chart.yaml  values.yaml
charts/niuu-shared/: Chart.yaml  values.yaml
charts/skuld/: Chart.yaml  README-generate.sh  README.md  README.md.gotmpl  ci-values.yaml  values-planner.yaml  values.yaml
charts/skuld-planner/: Chart.yaml  values.yaml
charts/tyr/: Chart.yaml  ci-values.yaml  values.yaml
charts/volundr/: Chart.yaml  README-generate.sh  README.md  README.md.gotmpl  ci-values.yaml  values.yaml
cli/: .gitignore  .golangci.yml  Makefile  coverage.out  go.mod  go.sum
containers/bifrost/: Dockerfile  entrypoint.sh
containers/devrunner/: Dockerfile  (+3 more)
docs/: bifrost-audit.md  niu-771-checklist.md  session-log-aggregation-checklist.md  testing.md
migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_add_session_columns.down.sql  000003_add_repo_branch_columns.down.sql  000004_fix_schema_drift.down.sql  000005_chronicles.down.sql  000006_chronicle_events.down.sql  000007_session_events.down.sql  000007_session_events.up.sql  000008_saved_prompts.down.sql  000009_session_archive.down.sql  000010_project_mappings.down.sql  000011_volundr_presets.down.sql  000012_tenant_hierarchy.down.sql  000013_credential_metadata.down.sql  000014_integration_connections.down.sql  000015_workspaces.down.sql  000016_session_source.down.sql  000017_preset_source_integrations_scripts.down.sql  000018_integration_slug.down.sql  000019_session_issue_link.down.sql  000020_feature_toggles.down.sql  000020_feature_toggles.up.sql  000021_personal_access_tokens.up.sql  000021_tyr_contract_negotiations.down.sql  000021_tyr_contract_negotiations.up.sql  000023_session_activity_state.down.sql  000024_rename_user_id_to_owner_id.down.sql  000024_rename_user_id_to_owner_id.up.sql  000025_ravn_episodes.up.sql  000025_sleipnir_events.down.sql  000025_sleipnir_events.up.sql  000026_bifrost_audit.down.sql  000026_bifrost_audit.up.sql  000026_ravn_episodes.down.sql  000026_ravn_episodes.up.sql  000027_bifrost_requests.down.sql  000027_bifrost_requests.up.sql  000028_bifrost_audit.up.sql  000029_buri_knowledge_facts.down.sql  (+19 more)
mimir-ui/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  vite.config.ts  vitest.config.ts
scripts/: build_postgres.sh  demo_utils.py  extract_openapi.py  ravn-flock-e2e.sh  ravn-mesh-e2e.sh  ravn-mesh.sh  scaffold-module.sh  smoke-test.sh  test-flock-outcome.py  test-mesh-event.py  validate_pgserver_nuitka.py
tests/: SMOKE_TEST_README.md  __init__.py  conftest.py  smoke_tests_route_parity.py  test_archive.py  test_branches.py  test_broadcaster.py  test_config.py  test_demo_utils.py  test_diff_endpoint.py  test_fibonacci.py  test_file_manager_proxy.py  test_files_endpoint.py  test_greeting.py  test_integration_registry.py  test_integrations.py  test_main.py  test_main_contributors.py  test_main_integration_seeding.py  test_presets.py  test_profiles.py  test_prompts.py  test_resolve_secret_kwargs.py  test_rest.py  test_reverse.py  test_services.py  test_terminal.py  test_tracker.py
web/: .env.example  .gitignore  .npmrc  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  test-vite-bisect.cjs  test-vite.cjs  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
web-next/: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  package.json  playwright.capture.config.ts  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts  vitest.setup.ts
wiki/: MIMIR.md  WIKI.md  index.md  mimir_log.md
(+3534 files in other folders)
