[project]
name = "volundr"
version = "0.1.0"
description = "Volundr — self-hosted AI-native development platform"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["development-platform", "remote-coding", "ai", "kubernetes", "self-hosted"]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "fastapi>=0.109",
    "python-multipart>=0.0.9",
    "PyJWT>=2.8",
    "uvicorn>=0.27",
    "websockets>=12.0",
    "python-on-whales>=0.70",
    "gitpython>=3.1",
]

[project.optional-dependencies]
rabbitmq = [
    "aio-pika>=9.0",
]
k8s = [
    "kubernetes-asyncio>=30.0",
]
otel = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
]
encryption = [
    "cryptography>=42.0",
]
cli = [
    "typer>=0.12",
    "textual>=0.79",
    "nuitka>=2.1",
    "ordered-set>=4.1",
    "patchelf>=0.14; sys_platform == 'linux'",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.8,<0.15",
    "respx>=0.21",
    "cryptography>=42.0",
    "textual>=0.79",
    "typer>=0.12",
]

[project.scripts]
niuu = "cli.main:main"
volundr = "volundr.main:main"
skuld = "skuld.broker:main"
bifrost = "bifrost.__main__:main"
tyr = "tyr.main:main"

[project.entry-points."niuu.plugins"]
niuu = "niuu.plugin:NiuuPlugin"
volundr = "volundr.plugin:VolundrPlugin"
tyr = "tyr.plugin:TyrPlugin"

[project.urls]
Homepage = "https://github.com/niuulabs/volundr"
Documentation = "https://github.com/niuulabs/volundr"
Repository = "https://github.com/niuulabs/volundr"
Issues = "https://github.com/niuulabs/volundr/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli", "src/niuu", "src/volundr", "src/tyr", "src/skuld", "src/bifrost"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short -m 'not integration'"
markers = [
    "integration: tests that require a real PostgreSQL database",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.coverage.run]
source = ["src/volundr", "src/cli", "src/tyr", "src/niuu", "src/skuld", "src/bifrost"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
